<!-- Denizen build file -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.denizenscript</groupId>
    <artifactId>denizen-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.2.6-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <craftbukkit.version>1.19.3-R0.1-SNAPSHOT</craftbukkit.version>
        <citizens.version>2.0.30-SNAPSHOT</citizens.version>
        <dcore.version>1.90.2-SNAPSHOT</dcore.version>
        <BUILD_NUMBER>Unknown</BUILD_NUMBER>
        <BUILD_CLASS>CUSTOM</BUILD_CLASS>
        <DENIZEN_VERSION>1.2.6</DENIZEN_VERSION>
    </properties>

    <modules>
        <module>plugin</module>
        <module>paper</module>
        <module>v1_19</module>
        <module>v1_18</module>
        <module>v1_17</module>
        <module>dist</module>
    </modules>

    <!-- Repositories -->
    <repositories>
        <repository>
            <id>everything</id>
            <url>https://maven.citizensnpcs.co/repo</url>
        </repository>
        <!--<repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>-->
    </repositories>

    <ciManagement>
        <system>jenkins</system>
        <url>https://ci.citizensnpcs.co</url>
    </ciManagement>
    <scm>
        <connection>scm:git:git://github.com/DenizenScript/Denizen-For-Bukkit.git</connection>
        <developerConnection>scm:git:git:@github.com:DenizenScript/Denizen-For-Bukkit.git</developerConnection>
        <url>https://github.com/DenizenScript/Denizen-For-Bukkit/tree/dev/</url>
    </scm>
    <distributionManagement>
        <repository>
            <id>citizens-repo</id>
            <url>https://maven.citizensnpcs.co/repo</url>
        </repository>
    </distributionManagement>

    <build>
        <defaultGoal>clean package install</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>default-deploy</id>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <url>https://denizenscript.com/</url>
</project>
